trunk/Archive2/37/eb8d15378aefe9/output
main.cpp:7:23: error: variable length array of non-POD element type 'std::vector<int>'
    std::vector<int> v[x];
                      ^
main.cpp:8:24: error: variable length array of non-POD element type 'std::complex<int>'
    std::complex<int> c[x];
                       ^
2 errors generated.
